# Flare-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  g++build.bat  main.cpp  purge-cmake.sh  run.bat  test.sh
glfw-3.3.2/: CMakeLists.txt  Makefile
glfw-3.3.2/examples/: Makefile  boing  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
glfw-3.3.2/src/: Makefile
glfw-3.3.2/tests/: Makefile  clipboard  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
include/glad/: glad.c  glad.h
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/GLFW/: glfw3.h
